--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.INFO6130Project1"
         tools:targetApi="31">
         <activity
-            android:name=".activitys.MainActivity"
+            android:name=".activitys.MainTabActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,7 +24,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".activitys.ArticleDetailActivity" />
-        <activity android:name=".activitys.LikedArticlesActivity" />
+        <activity android:name=".activitys.LikedArticlesFragment" />
         <activity android:name=".activitys.AboutActivity" />
     </application>
 
