--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Jul 04 14:47:43 EDT 2025
-sdk.dir=/Users/bemy/Library/Android/sdk
+#Fri Jul 04 16:17:22 BRT 2025
+sdk.dir=/Users/igorgarcia/Library/Android/sdk
